--- a/index.css
+++ b/index.css
@@ -36,18 +36,18 @@ header {
 }
 
 header > img {
-    width: 10em;
-    height: 10em;
+    width: 8em;
+    height: 8em;
     border-radius: 100%;
     border: 0.5px solid black;
     box-shadow: white 0px 3px 100px;
 }
 
 header > h1 {
-    display: 0.8em;
+    display: inline-block;
     font-size: 1em;
     font-weight: bold;
-    border-radius: 2em;
+    border-radius: 1em;
     background-color: #000a;
     color : #fff;
     padding: 0.3em 0.6em;
@@ -60,7 +60,7 @@ ul {
     list-style: none;
     margin: 0 auto;
     padding: 2em;
-    max-width: 450px;
+    max-width: 420px;
 }
 ul > li {
     background-color: #fffa;
@@ -68,7 +68,7 @@ ul > li {
     -webkit-backdrop-filter: blur(10px) saturate(160%) contrast(180%) ;
     border-radius: 10em;
     margin: 1.5em 0;
-    box-shadow: white 0px 2px 8px 0px;
+    box-shadow: black 0px 2px 8px 0px;
 }
 
 ul > li > a {
@@ -76,7 +76,7 @@ ul > li > a {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 1em;
+    gap: 0.5em;
     padding: 1em;
 }
 
